--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
 
-    <title>He-Brews Coffee</title>
+    <title>Hebrews coffee</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -31,7 +31,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navmenu">
+        <!-- <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a href="index.html" class="nav-link">Home</a>
@@ -45,7 +45,23 @@
             <li class="nav-item">
               <a href="contact.html" class="nav-link">Contact Us</a>
             </li>
-          </ul>
+          </ul> -->
+
+          <div class="collapse navbar-collapse" id="navmenu">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a href="index.html" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="menu.html" class="nav-link">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a href="Location.html" class="nav-link">Location</a>
+              </li>
+              <li class="nav-item">
+                <a href="contact.html" class="nav-link">Contact Us</a>
+              </li>
+            </ul>
         </div>
       </div>
     </nav>
@@ -77,7 +93,7 @@
                 class="form-control"
               ></textarea>
             </div>
-            <button type="submit" class="btn btn-danger">Submit</button>
+            <button type="submit" class="btn btn-success">Submit</button>
           </form>
         </div>
       </div>
@@ -92,10 +108,9 @@
           <h2 class="text-center mb-4">Contact Info</h2>
           <ul class="list-group list-group-flush lead">
             <li class="list-group-item">
-              <span class="fw-bold"> Location:</span> Tanauan City Batangas
-            </li>
+             
           
-            <li class="list-group-item">
+              <li class="list-group-item">
               <span class="fw-bold">Contact Number:</span> 02-485-2138
             </li>
             <li class="list-group-item">
