--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
 
-    <title>KodeGo Bootcamp</title>
+    <title>Hebrews coffee</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -31,7 +31,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navmenu">
+        <!-- <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a href="index.html" class="nav-link">Home</a>
@@ -43,9 +43,24 @@
               <a href="testimonials.html" class="nav-link">Location</a>
             </li>
             <li class="nav-item">
-              <a href="contact.html" class="nav-link">Contact Us</a>
-            </li>
-          </ul>
+              <a href="contact.html" class="nav-link">Contact Us</a> -->
+
+
+              <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a href="index.html" class="nav-link">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="menu.html" class="nav-link">Menu</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="Location.html" class="nav-link">Location</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="contact.html" class="nav-link">Contact Us</a>
+                  </li>
+                </ul>
         </div>
       </div>
     </nav>
@@ -65,7 +80,7 @@
           <h2> Pastries </h2>
     
           <p>
-            You know why everyone loves cakes? Obviously because of the taste. One of the very basic yet important features of any cake is its taste. How the cake tastes and what you feel after having a single bite defines the whole existence of the cake. A cake should be enriched in taste and should satisfy you completely.
+            You know why everyone loves cakes? Obviously because of the taste. One of the very basic yet important features of any cake is its taste. How the cake tastes and what you feel after having a single bite defines the whole existence of the cake.
           </p>
           <a href="#" class="btn btn-light mt-3">
             
