--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
 
-    <title>He-Brews Coffee</title>
+    <title>Hebrews coffee</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -37,10 +37,10 @@
               <a href="index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="services.html" class="nav-link">Menu</a>
+              <a href="menu.html" class="nav-link">Menu</a>
             </li>
             <li class="nav-item">
-              <a href="testimonials.html" class="nav-link">Location</a>
+              <a href="Location.html" class="nav-link">Location</a>
             </li>
             <li class="nav-item">
               <a href="contact.html" class="nav-link">Contact Us</a>
@@ -49,8 +49,12 @@
         </div>
       </div>
     </nav>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-    <!-- Portfolio -->
+    <!-- Menu -->
     <section>
       <div class="container-fluid">
         <div class="row">
@@ -114,7 +118,7 @@
               <img class="w-100" src="img/p6.jpg" alt="Project 6" />
               <div class="portfolio-overlay">
                 <div class="portfolio-text text-white">
-                  <h3>Crossiant</h3>
+                  <h3>croissant</h3>
                  
                 </div>
               </div>
@@ -124,7 +128,7 @@
       </div>
     </section>
 
-    <!-- product -->
+    <!-- product list -->
     <section>
       <div class="container">
         <div class="row">
